added most methods to swagger; going slightly crazy
